build: add opens and update parent