@@ -6,7 +6,7 @@
     <parent>
         <groupId>io.github.fontysvenlo</groupId>
         <artifactId>informaticspom</artifactId>
-        <version>0.9</version>
+        <version>1.0</version>
     </parent>
     <groupId>io.github.fontysvenlo.alda</groupId>
     <artifactId>appointmentplanner_api</artifactId>
@@ -15,5 +15,8 @@
     <name>ALDA AppointmentPlanner API</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <surefire.opens>
+            --add-opens appoinmentplanner.api/appointmentplanner.api=ALL-UNNAMED
+        </surefire.opens>
     </properties>
 </project>
